# j4f-cli-toolkit

./: README.md  j4f.py  main.py  pyproject.toml  setup.py
j4f/: __main__.py
toolkit/: __init__.py  banner.py  info.py  network.py  system.py  utils.py
